overflow fixed

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -67,7 +67,6 @@ body{
     font-family: acuminPro;
     background-color: var(--darkGray);
     overscroll-behavior-y: none;
-    overflow: hidden;
 }
 h1,h2,h3,h4,p{
     color: var(--white);
@@ -226,8 +225,6 @@ h1,h2,h3,h4,p{
     background-size: cover;
     /* height: 1400px; */
     position: relative;
-    animation: none;
-    -webkit-animation: none;
 }
 .hero:before {
     content: '';
